# PenguinMIDI

./: .gitignore  .gitmodules  CLAUDE.md  CONTEXT.md  Dockerfile  MASTER CONTEXT.txt  build-plugin.sh  docker-compose.yml  requirements.txt
.github/workflows/: pages.yml
docs/superpowers/plans/: 2026-05-20-penguin-lfo-features.md  2026-05-20-penguin-lfo.md  2026-05-31-penguin-midi-vst.md  2026-05-31-penguin-suite-repo-setup.md
docs/superpowers/specs/: 2026-05-20-penguin-lfo-design.md  2026-05-20-penguin-lfo-features-design.md  2026-05-31-penguin-midi-vst-design.md  2026-05-31-penguin-suite-setup-design.md
src/: __init__.py
src/penguin-lfo/: CMakeLists.txt
src/penguin-lfo/Presets/: presets.json
src/penguin-lfo/Source/: CustomWaveformEditor.cpp  LFOEngine.cpp  LFOEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  WaveformVisualizer.cpp  WaveformVisualizer.h
src/penguin-lfo/tests/: CMakeLists.txt  test_lfo_engine.cpp  test_preset_manager.cpp
